Thu Jun 10 18:05:09 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          More memory leaks fixed.

2004-06-10  turkaye  <turkaye@lambada.isis.vanderbilt.edu>

	* DnC/Config_Handlers/CAD_Handler.cpp:
	* DnC/Config_Handlers/CPK_Handler.cpp:
	* DnC/Config_Handlers/CompImplDesc_Handler.cpp:

	Memory leak problem with XMLString::transcode () is solved.

Thu Jun 10 17:46:10 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.cpp:
        * DnC/Config_Handlers/TPD_Handler.cpp:

          Fixe memory leaks pertaining to ACE_TString making copies of
          dynamically allocated memory. The memory supplied to ACE_TString
          has to be deleted! Fixed memory for these.

Thu Jun 10 17:44:57 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:
        * DnC/Config_Handlers/Property_Handler.cpp:
        * DnC/Config_Handlers/RS_Handler.cpp:
        * DnC/Config_Handlers/Requirement_Handler.cpp:
        * DnC/Config_Handlers/SP_Handler.cpp:

          More memory leaks fixes.

Thu Jun 10 17:27:35 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Utils.cpp:

          Fixed some memory leaks as well!!

Thu Jun 10 17:26:25 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Process_Element.cpp:

          Fixed memory leaks.

Thu Jun 10 14:06:03 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servant_Impl_T.cpp:
        * DnC/ciao/Servant_Impl_T.cpp:

          Modified code that passed _var.out() to ACE_NEW_RETURN,
          since sometimes on Windows platforms, for whatever
          reason Var_Base::out() will be called after the
          allocation, effectively cancelling it out. It is