@@ -11,16 +11,16 @@ CIAO::Config_Handler::CPK_Handler::
 process_CCMComponentPortKind (DOMNodeIterator * iter,
                               Deployment::CCMComponentPortKind &kind)
 {
-  const char* facet = XMLString::transcode (XStr ("Facet"));
-  const char* simplex_receptacle = XMLString::transcode (XStr ("SimplexReceptacle"));
-  const char* multiplex_receptacle = XMLString::transcode (XStr ("MultiplexReceptacle"));
-  const char* multiplex_receptacle = XMLString::transcode (XStr ("EventEmitter"));
-  const char* event_publisher = XMLString::transcode (XStr ("EventPublisher"));
-  const char* event_consumer = XMLString::transcode (XStr ("EventConsumer"));
+  char* facet = XMLString::transcode (XStr ("Facet"));
+  char* simplex_receptacle = XMLString::transcode (XStr ("SimplexReceptacle"));
+  char* multiplex_receptacle = XMLString::transcode (XStr ("MultiplexReceptacle"));
+  char* event_emitter = XMLString::transcode (XStr ("EventEmitter"));
+  char* event_publisher = XMLString::transcode (XStr ("EventPublisher"));
+  char* event_consumer = XMLString::transcode (XStr ("EventConsumer"));
 
   XStr kind_str = XStr (Utils::parse_string (iter));
 
-  const char* kind_str_tr = XMLString::transcode (kind_str);
+  char* kind_str_tr = XMLString::transcode (kind_str);
 
   if ((ACE_OS::strcmp (kind_str_tr, facet)) == 0)
   {
@@ -49,23 +49,23 @@ process_CCMComponentPortKind (DOMNodeIterator * iter,
   else
   {
     // Something wrong here.. Throw exception
-    XMLString::release (kind_str_tr);
-    XMLString::release (facet);
-    XMLString::release (simplex_receptacle);
-    XMLString::release (multiplex_receptacle);
-    XMLString::release (multiplex_receptacle);
-    XMLString::release (event_publisher);
-    XMLString::release (event_consumer);
+    XMLString::release (&kind_str_tr);
+    XMLString::release (&facet);
+    XMLString::release (&simplex_receptacle);
+    XMLString::release (&multiplex_receptacle);
+    XMLString::release (&event_emitter);
+    XMLString::release (&event_publisher);
+    XMLString::release (&event_consumer);
 
     ACE_DEBUG ((LM_DEBUG,
                 "Config_Handler::CPK_Handler::process_CCMComponentPortKing illegal <CCMComponentPortKind> value found \n"));
     ACE_THROW (CORBA::INTERNAL ());
   }
-  XMLString::release (kind_str_tr);
-  XMLString::release (facet);
-  XMLString::release (simplex_receptacle);
-  XMLString::release (multiplex_receptacle);
-  XMLString::release (multiplex_receptacle);
-  XMLString::release (event_publisher);
-  XMLString::release (event_consumer);
+  XMLString::release (&kind_str_tr);
+  XMLString::release (&facet);
+  XMLString::release (&simplex_receptacle);
+  XMLString::release (&multiplex_receptacle);
+  XMLString::release (&event_emitter);
+  XMLString::release (&event_publisher);
+  XMLString::release (&event_consumer);
 }
